# dev-home

./: .containerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Containerfile  README.md  compose.yml  dev  entrypoint.sh  justfile  moran.custom.yaml  nas-install.sh  symlink_samples.nu  task.nu
.github/workflows/: ghcr.yml
Rime/: init.nu  install.nu  moran.custom.yaml
alacritty/: alacritty.base.toml  alacritty.unix.toml  alacritty.windows.toml  catppuccin-frappe.toml  init.nu
docs/: design.md  requirements.md  symlink_manager.md
helix/: config.toml  init.nu  install-languages.nu  languages.toml
nushell/: .gitignore  README.md  config.nu  env.nu  init.nu  install.nu
nushell/helpers/: git.nu
nushell/inits/: linux.nu  macos.nu  windows.nu
nushell/modules/: do.nu  files.nu  pathvar.nu
rime/: init.nu  moran.custom.yaml
scripts/: bootstrap-ubuntu-server.sh
src/: main.rs  pathes.toml
starship/: init.nu
tmux/: init.nu
wezterm/: wezterm.lua
yazi/: init.nu
