[package]
name = "toolchain-cross-platform"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"

[dev-dependencies]
uuid = { version = "1.16.0", features = ["serde", "v4"] }
